# backend/routes/ActualDetailRouter.js
@@ -7,7 +7,9 @@ const {
     createActualDetail,
     updateActualDetail,
     deleteActualDetail,
-    getSummaryAcualCost
+    getSummaryAcualCost,
+    getSummaryAcualCostByYear,
+    getSummaryAcualCostByYearByStatus
 } = require("../controllers/ActualDetailController");
 
 router.post("/", createActualDetail);
@@ -16,5 +18,8 @@ router.get("/:id", getActualDetailById);
 router.delete("/:id", deleteActualDetail);
 router.put("/:id", updateActualDetail);
 router.get("/summary/cost", getSummaryAcualCost);
+router.get("/summary/cost/:year", getSummaryAcualCostByYear);
+router.get("/summary/cost/:year/:status", getSummaryAcualCostByYearByStatus);
+
 
 module.exports = router;
