# backend/routes/LoginRouter.js
@@ -2,10 +2,13 @@ const express = require("express");
 
 const router = express.Router();
 
-const { login, authen } = require("../controllers/LoginController");
+const { login, authen, logout, getHistory } = require("../controllers/LoginController");
 
 router.post("/", login);
 router.get("/authen", authen);
+router.put("/logout/:userName", logout);
+router.get("/history", getHistory);
+
 
 module.exports = router;
 
